<?xml version="1.0"?>
<package format="3">
  <name>mujoco_viewer</name>
  <version>0.0.0</version>
  <description>mujoco_viewer</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
